--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@pinecone-database/pinecone": "^0.1.5",
+    "@types/formidable": "^3.4.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
+    "formidable": "^3.5.0",
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.75",
     "next": "13.4.1",
@@ -27,6 +29,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "serpapi": "^1.1.1",
     "supports-color": "^9.3.1",
     "tailwindcss": "3.3.2",
